[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

[lib]
path = "src-rs/lib.rs"
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2.78"
web-sys = { version = "0.3", features = ["ImageData"] }

[profile.release]
opt-level = 3
lto = true